fix: import error of src/ subdirs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,5 +2,8 @@
 name = "ChangeMambaVision"
 version = "1.0.0"
 
+[tool.setuptools]
+package-dir = {"" = "src"}
+
 [tool.setuptools.packages.find]
 where = ["src"]
